name:                stack2nix
version:             0.1.0.0
synopsis:            Convert Stack files into Nix build instructions.
homepage:            https://github.com/4e6/stack2nix#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Bushev
maintainer:          bushevdv@gmail.com
category:            Distribution, Nix
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Distribution.Nixpkgs.Haskell.Stack
                     , Stack.Yaml
  build-depends:       aeson > 1.0 && < 1.1
                     , base > 4.7 && < 5
                     , distribution-nixpkgs > 1 && < 1.1
                     , language-nix > 2.1 && < 2.2
                     , pretty > 1.1 && < 1.2
                     , text > 1.2 && < 1.3
                     , yaml > 0.8 && < 0.9
  default-language:    Haskell2010
  ghc-options:         -Wall

executable stack2nix
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative > 0.13 && < 1
                     , stack2nix
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring > 0.10 && < 0.11
                     , hspec
                     , shakespeare
                     , stack2nix
                     , text
                     , yaml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/4e6/stack2nix
