name:                stack2nix
version:             0.2.0
synopsis:            Convert Stack files into Nix build instructions.
homepage:            https://github.com/4e6/stack2nix#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Bushev
maintainer:          bushevdv@gmail.com
category:            Distribution, Nix
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AllCabalHashes
                     , Distribution.Nixpkgs.Haskell.FromStack
                     , Distribution.Nixpkgs.Haskell.FromStack.Package
                     , Distribution.Nixpkgs.Haskell.Packages.PrettyPrinting
                     , Distribution.Nixpkgs.Haskell.Stack
                     , Distribution.Nixpkgs.Haskell.Stack.PrettyPrinting
                     , Language.Nix.FilePath
                     , Runner
                     , Runner.Cli
                     , Stack.Config
                     , Stack.Config.TH
                     , Stack.Config.Yaml
                     , Stack.Types
                     , Stackage2nix
  other-modules:       Paths_stack2nix
  build-depends:       base > 4.7 && < 5
                     , Cabal > 1.24
                     , QuickCheck
                     , aeson
                     , bytestring
                     , cabal2nix >= 2.3
                     , containers
                     , deepseq
                     , distribution-nixpkgs >= 1.1
                     , filepath
                     , gitlib > 3
                     , gitlib-libgit2 > 3
                     , hopenssl > 2.2
                     , inflections
                     , language-nix
                     , lens
                     , network-uri
                     , optparse-applicative
                     , pretty
                     , stackage-curator
                     , text
                     , unordered-containers
                     , yaml
  default-extensions:  LambdaCase
                     , OverloadedStrings
                     , RecordWildCards
                     , TemplateHaskell
  default-language:    Haskell2010
  ghc-options:         -Wall -funbox-strict-fields

executable stackage2nix
  hs-source-dirs:      stackage2nix
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stack2nix
  default-language:    Haskell2010

executable stack2nix
  hs-source-dirs:      stack2nix
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stack2nix
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Cabal
                     , bytestring
                     , hspec
                     , pretty
                     , shakespeare
                     , stack2nix
                     , text
                     , yaml
  default-extensions:  OverloadedStrings
  other-modules:       Language.Nix.FilePathSpec
                     , PrettyPrintingSpec
                     , Stack.Config.YamlSpec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/4e6/stack2nix
