name:                stackage2nix
version:             0.7.0
synopsis:            Convert Stack files into Nix build instructions.
homepage:            https://github.com/typeable/stackage2nix#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Bushev
                   , Benno Fünfstück
maintainer:          bushevdv@gmail.com
category:            Distribution, Nix
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Distribution.Nixpkgs.Haskell.FromStack
                     , Distribution.Nixpkgs.Haskell.FromStack.Package
                     , Distribution.Nixpkgs.Haskell.Packages.PrettyPrinting
                     , Distribution.Nixpkgs.Haskell.Stack
                     , Distribution.Nixpkgs.Haskell.Stack.PrettyPrinting
                     , Language.Nix.FilePath
                     , Runner
                     , Runner.Cli
                     , Stack.Config
                     , Stack.Config.TH
                     , Stack.Config.Yaml
                     , Stack.Types
  other-modules:       AllCabalHashes
                     , LtsHaskell
                     , Paths_stackage2nix
  build-depends:       base > 4.7 && < 5
                     , Cabal > 2
                     , QuickCheck
                     , aeson
                     , bytestring
                     , cabal2nix >= 2.7.2
                     , containers
                     , deepseq
                     , directory
                     , distribution-nixpkgs >= 1.1
                     , exceptions > 0.8
                     , filepath
                     , hopenssl > 2.2
                     , inflections >= 0.3
                     , language-nix
                     , lens
                     , network-uri
                     , optparse-applicative
                     , pretty
                     , stackage-curator >= 0.15
                     , text
                     , unordered-containers
                     , yaml
  default-extensions:  LambdaCase
                     , OverloadedStrings
                     , RecordWildCards
                     , TemplateHaskell
  default-language:    Haskell2010
  ghc-options:         -Wall

executable stackage2nix
  hs-source-dirs:      stackage2nix
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stackage2nix
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Cabal
                     , bytestring
                     , hspec
                     , network-uri
                     , pretty
                     , shakespeare
                     , stackage2nix
                     , text
                     , yaml
  default-extensions:  OverloadedStrings
  other-modules:       Language.Nix.FilePathSpec
                     , PrettyPrintingSpec
                     , Stack.Config.YamlSpec
                     , Stack.ConfigSpec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/typeable/stackage2nix
